@@ -9,87 +9,144 @@ import de.muenchen.dave.domain.dtos.laden.messwerte.LadeBelastungsplanMessquersc
 import de.muenchen.dave.domain.dtos.messstelle.MessstelleOptionsDTO;
 import de.muenchen.dave.domain.dtos.messstelle.ReadMessquerschnittDTO;
 import de.muenchen.dave.domain.dtos.messstelle.ReadMessstelleInfoDTO;
-import de.muenchen.dave.geodateneai.gen.model.MeasurementValuesPerInterval;
-import de.muenchen.dave.geodateneai.gen.model.TotalSumPerMessquerschnitt;
-import java.math.BigDecimal;
-import java.math.RoundingMode;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
-import lombok.AllArgsConstructor;
+import de.muenchen.dave.geodateneai.gen.model.IntervalDto;
+import de.muenchen.dave.util.messstelle.MesswerteBaseUtil;
+import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.stereotype.Service;
 
-@AllArgsConstructor
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.List;
+import java.util.Objects;
+
 @Service
+@RequiredArgsConstructor
 public class BelastungsplanService {
+
     private final MessstelleService messstelleService;
+
     private final RoundingService roundingService;
+
     private final SpitzenstundeService spitzenstundeService;
 
-    public BelastungsplanMessquerschnitteDTO ladeBelastungsplan(final List<MeasurementValuesPerInterval> intervals,
-            final List<TotalSumPerMessquerschnitt> totalSumOfAllMessquerschnitte,
-            final String messstelleId, final MessstelleOptionsDTO options) {
-        final BelastungsplanMessquerschnitteDTO belastungsplanMessquerschnitteDTO = new BelastungsplanMessquerschnitteDTO();
-        final List<LadeBelastungsplanMessquerschnittDataDTO> listBelastungsplanMessquerschnitteDTO = new ArrayList<>();
-        final ReadMessstelleInfoDTO messstelle = messstelleService.readMessstelleInfo(messstelleId);
-        belastungsplanMessquerschnitteDTO.setMstId(messstelle.getMstId());
-        belastungsplanMessquerschnitteDTO.setStadtbezirkNummer(messstelle.getStadtbezirkNummer());
-        belastungsplanMessquerschnitteDTO.setStrassenname(getStrassennameFromMessquerschnitt(messstelle));
-        totalSumOfAllMessquerschnitte.forEach(sumOfMessquerschnitt -> {
-            LadeBelastungsplanMessquerschnittDataDTO ladeBelastungsplanMessquerschnittDataDTO = new LadeBelastungsplanMessquerschnittDataDTO();
-            ladeBelastungsplanMessquerschnittDataDTO.setSumKfz(roundNumberIfNeeded(sumOfMessquerschnitt.getSumKfz(), options));
-            ladeBelastungsplanMessquerschnittDataDTO.setSumGv(roundNumberIfNeeded(sumOfMessquerschnitt.getSumGv(), options));
-            ladeBelastungsplanMessquerschnittDataDTO.setSumSv(roundNumberIfNeeded(sumOfMessquerschnitt.getSumSv(), options));
-            ladeBelastungsplanMessquerschnittDataDTO.setSumRad(roundNumberIfNeeded(sumOfMessquerschnitt.getSumRad(), options));
-            ladeBelastungsplanMessquerschnittDataDTO.setPercentGV(calcPercentage(sumOfMessquerschnitt.getSumGv(), sumOfMessquerschnitt.getSumKfz()));
-            ladeBelastungsplanMessquerschnittDataDTO.setPercentSv(calcPercentage(sumOfMessquerschnitt.getSumSv(), sumOfMessquerschnitt.getSumKfz()));
-            ladeBelastungsplanMessquerschnittDataDTO.setMqId(sumOfMessquerschnitt.getMqId());
-            ladeBelastungsplanMessquerschnittDataDTO.setDirection(getDirection(messstelle, sumOfMessquerschnitt.getMqId()));
-            listBelastungsplanMessquerschnitteDTO.add(ladeBelastungsplanMessquerschnittDataDTO);
-        });
-        final Integer totalSumKfz = totalSumOfAllMessquerschnitte.stream().mapToInt(TotalSumPerMessquerschnitt::getSumKfz).sum();
-        final Integer totalSumSv = totalSumOfAllMessquerschnitte.stream().mapToInt(TotalSumPerMessquerschnitt::getSumSv).sum();
-        final Integer totalSumGv = totalSumOfAllMessquerschnitte.stream().mapToInt(TotalSumPerMessquerschnitt::getSumGv).sum();
-        final Integer totalSumRad = totalSumOfAllMessquerschnitte.stream().mapToInt(TotalSumPerMessquerschnitt::getSumRad).sum();
-        belastungsplanMessquerschnitteDTO.setTotalKfz(roundNumberIfNeeded(totalSumKfz, options));
-        belastungsplanMessquerschnitteDTO.setTotalSv(roundNumberIfNeeded(totalSumSv, options));
-        belastungsplanMessquerschnitteDTO.setTotalGv(roundNumberIfNeeded(totalSumGv, options));
-        belastungsplanMessquerschnitteDTO.setTotalRad(roundNumberIfNeeded(totalSumRad, options));
-        final Integer totalSum = totalSumGv + totalSumKfz + totalSumSv;
-        belastungsplanMessquerschnitteDTO.setTotalPercentGv(calcPercentage(totalSumGv, totalSum));
-        belastungsplanMessquerschnitteDTO.setTotalPercentSv(calcPercentage(totalSumSv, totalSum));
-        belastungsplanMessquerschnitteDTO.setLadeBelastungsplanMessquerschnittDataDTOList(listBelastungsplanMessquerschnitteDTO);
-        if (options.getMessquerschnittIds().size() == 1) {
-            final var isKfzStelle = Objects.equals(options.getZeitauswahl(), "Spitzenstunde KFZ");
-            final var spitzenstunde = spitzenstundeService.calculateSpitzenstunde(options.getZeitblock(), intervals, isKfzStelle);
-            belastungsplanMessquerschnitteDTO.setStartUhrzeitSpitzenstunde(spitzenstunde.getStartUhrzeit());
-            belastungsplanMessquerschnitteDTO.setEndeUhrzeitSpitzenstunde(spitzenstunde.getEndeUhrzeit());
-        }
-        return belastungsplanMessquerschnitteDTO;
+    protected static String getStrassennameFromMessquerschnitt(ReadMessstelleInfoDTO messstelle) {
+        return CollectionUtils.isEmpty(messstelle.getMessquerschnitte())
+                ? ""
+                : messstelle.getMessquerschnitte().getFirst().getStrassenname();
     }
 
-    private static String getStrassennameFromMessquerschnitt(ReadMessstelleInfoDTO messstelle) {
-        if (CollectionUtils.isEmpty(messstelle.getMessquerschnitte())) {
-            return "";
+    public BelastungsplanMessquerschnitteDTO ladeBelastungsplan(
+            final List<IntervalDto> intervals,
+            final List<IntervalDto> totalSumOfAllMessquerschnitte,
+            final String messstelleId,
+            final MessstelleOptionsDTO options) {
+
+        final BelastungsplanMessquerschnitteDTO belastungsplanMessquerschnitte = new BelastungsplanMessquerschnitteDTO();
+
+        final ReadMessstelleInfoDTO messstelle = messstelleService.readMessstelleInfo(messstelleId);
+
+        belastungsplanMessquerschnitte.setMstId(messstelle.getMstId());
+        belastungsplanMessquerschnitte.setStadtbezirkNummer(messstelle.getStadtbezirkNummer());
+        belastungsplanMessquerschnitte.setStrassenname(getStrassennameFromMessquerschnitt(messstelle));
+
+        final var messquerschnitte = totalSumOfAllMessquerschnitte
+                .stream()
+                .map(sumOfMessquerschnitt -> {
+                    LadeBelastungsplanMessquerschnittDataDTO messquerschnitt = new LadeBelastungsplanMessquerschnittDataDTO();
+
+                    final var kfz = ObjectUtils.defaultIfNull(sumOfMessquerschnitt.getSummeKraftfahrzeugverkehr(), BigDecimal.ZERO).intValue();
+                    final var sumKfz = roundNumberToHundredIfNeeded(kfz, options);
+                    messquerschnitt.setSumKfz(sumKfz);
+
+                    final var gv = ObjectUtils.defaultIfNull(sumOfMessquerschnitt.getSummeGueterverkehr(), BigDecimal.ZERO).intValue();
+                    final var sumGv = roundNumberToHundredIfNeeded(gv, options);
+                    messquerschnitt.setSumGv(sumGv);
+
+                    final var sv = ObjectUtils.defaultIfNull(sumOfMessquerschnitt.getSummeSchwerverkehr(), BigDecimal.ZERO).intValue();
+                    final var sumSv = roundNumberToHundredIfNeeded(sv, options);
+                    messquerschnitt.setSumSv(sumSv);
+
+                    final var rad = ObjectUtils.defaultIfNull(sumOfMessquerschnitt.getAnzahlRad(), BigDecimal.ZERO).intValue();
+                    final var sumRad = roundNumberToHundredIfNeeded(rad, options);
+                    messquerschnitt.setSumRad(sumRad);
+
+                    final var percentGv = calcPercentage(gv, kfz);
+                    messquerschnitt.setPercentGV(percentGv);
+
+                    final var percentSv = calcPercentage(sv, kfz);
+                    messquerschnitt.setPercentSv(percentSv);
+
+                    final var mqId = sumOfMessquerschnitt.getMqId().toString();
+                    messquerschnitt.setMqId(mqId);
+
+                    final var direction = getDirection(messstelle, sumOfMessquerschnitt.getMqId().toString());
+                    messquerschnitt.setDirection(direction);
+
+                    return messquerschnitt;
+                })
+                .toList();
+        belastungsplanMessquerschnitte.setLadeBelastungsplanMessquerschnittDataDTOList(messquerschnitte);
+
+        final Integer totalSumKfz = totalSumOfAllMessquerschnitte
+                .stream()
+                .mapToInt(interval -> ObjectUtils.defaultIfNull(interval.getSummeKraftfahrzeugverkehr(), BigDecimal.ZERO).intValue())
+                .sum();
+        belastungsplanMessquerschnitte.setTotalKfz(roundNumberToHundredIfNeeded(totalSumKfz, options));
+
+        final Integer totalSumSv = totalSumOfAllMessquerschnitte
+                .stream()
+                .mapToInt(interval -> ObjectUtils.defaultIfNull(interval.getSummeSchwerverkehr(), BigDecimal.ZERO).intValue())
+                .sum();
+        belastungsplanMessquerschnitte.setTotalSv(roundNumberToHundredIfNeeded(totalSumSv, options));
+
+        final Integer totalSumGv = totalSumOfAllMessquerschnitte
+                .stream()
+                .mapToInt(interval -> ObjectUtils.defaultIfNull(interval.getSummeGueterverkehr(), BigDecimal.ZERO).intValue())
+                .sum();
+        belastungsplanMessquerschnitte.setTotalGv(roundNumberToHundredIfNeeded(totalSumGv, options));
+
+        final Integer totalSumRad = totalSumOfAllMessquerschnitte
+                .stream()
+                .mapToInt(interval -> ObjectUtils.defaultIfNull(interval.getAnzahlRad(), BigDecimal.ZERO).intValue())
+                .sum();
+        belastungsplanMessquerschnitte.setTotalRad(roundNumberToHundredIfNeeded(totalSumRad, options));
+
+        final var totalSum = totalSumGv + totalSumKfz + totalSumSv;
+        final var totalPercentageGv = calcPercentage(totalSumGv, totalSum);
+        belastungsplanMessquerschnitte.setTotalPercentGv(totalPercentageGv);
+        final var totalPercentageSv = calcPercentage(totalSumSv, totalSum);
+        belastungsplanMessquerschnitte.setTotalPercentSv(totalPercentageSv);
+
+        if (options.getMessquerschnittIds().size() == 1) {
+            final var isKfzStelle = Objects.equals(options.getZeitauswahl(), "Spitzenstunde KFZ");
+            final var spitzenstunde = spitzenstundeService.calculateSpitzenstundeAndAddBlockSpecificDataToResult(
+                    options.getZeitblock(),
+                    intervals,
+                    isKfzStelle,
+                    options.getIntervall());
+            belastungsplanMessquerschnitte.setStartUhrzeitSpitzenstunde(spitzenstunde.getStartUhrzeit());
+            belastungsplanMessquerschnitte.setEndeUhrzeitSpitzenstunde(spitzenstunde.getEndeUhrzeit());
         }
-        return messstelle.getMessquerschnitte().get(0).getStrassenname();
+
+        return belastungsplanMessquerschnitte;
     }
 
     protected String getDirection(final ReadMessstelleInfoDTO messstelle, final String messquerschnittId) {
         ReadMessquerschnittDTO messquerschnittDto = messstelle.getMessquerschnitte().stream()
-                .filter(readMessquerschnittDTO -> Objects.equals(readMessquerschnittDTO.getMqId(), messquerschnittId)).collect(Collectors.toList()).get(0);
+                .filter(readMessquerschnittDTO -> Objects.equals(readMessquerschnittDTO.getMqId(), messquerschnittId))
+                .toList()
+                .getFirst();
         return messquerschnittDto.getFahrtrichtung();
     }
 
-    protected BigDecimal calcPercentage(final Integer part, final Integer total) {
-        BigDecimal partInBigDecimal = BigDecimal.valueOf(part);
-        BigDecimal totalInBigDecimal = BigDecimal.valueOf(total);
-        return partInBigDecimal.divide(totalInBigDecimal, 3, RoundingMode.HALF_UP).scaleByPowerOfTen(2);
+    protected BigDecimal calcPercentage(final Integer dividend, final Integer divisor) {
+        final var percentage = MesswerteBaseUtil.calculateAnteilProzent(dividend, divisor);
+        return BigDecimal.valueOf(percentage).setScale(1, RoundingMode.HALF_UP);
     }
 
-    private Integer roundNumberIfNeeded(final Integer numberToRound, final MessstelleOptionsDTO options) {
+    protected Integer roundNumberToHundredIfNeeded(final Integer numberToRound, final MessstelleOptionsDTO options) {
         if (Boolean.TRUE.equals(options.getWerteHundertRunden())) {
             return roundingService.roundIfNotNullOrZero(numberToRound, 100);
         } else {
